@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST muffin-1.0.0.tar.gz 3120536 RMD160 728885075df49e6364ce24b15e0694579d8f5b87 SHA1 e5095a17c3ced6ae08133930a77e0490d0d6e756 SHA256 6eb6ef91b8cd0b2bb51257f97c5cf441d9559201bc7d6e2d580a1bd4d102bf34
+DIST muffin-1.0.1.tar.gz 3120768 RMD160 bbc5d94d5e09abe9330e6a575c92912ead8d4c47 SHA1 2c227425bcc680c3ae6521c05f915e6364a5f925 SHA256 8fd972f08e3e51f5a66f9e8c026808235980fcf7a4f0da90591c98d009c72375
 EBUILD muffin-1.0.0.ebuild 1888 RMD160 868fc250befb17dbcf4b77e89a136869084aab6e SHA1 9e6c88ccd8080cd42c399037e32b978908ffd350 SHA256 ee5e8ed4d2c3dff2e67f782cf9846a26d440797d67074e1fedd3f4c6f42ec1ba
-MISC ChangeLog 458 RMD160 7a60cd6930a1ed8db53b1596f09cd5de15d30f3b SHA1 f2853a0f3f1e9dbd1c7e46a21cbbbbb5260f3b29 SHA256 64d6bae8534376c52ea01f0aeeaca5f9a6d513b8821e9b7fbe0f7b4c057f1527
+EBUILD muffin-1.0.1.ebuild 1888 RMD160 0fa2ef95225a93cf15b93fd5e8baf497977c2838 SHA1 f045a7abb6075203d6bda58b24af854d5ebef7df SHA256 1f38e7e7b891411d52910d2be642ad28bb9803e21bcba73b1b3a43824a1c55ac
+MISC ChangeLog 587 RMD160 602f9e493ff59d0437de74600909cdbc976ad0f9 SHA1 44e91bcb27639fc0dad1121bda552352631f7f79 SHA256 5518699a578339396665efc928dc028765938e2859b03d5b140f419d77fb54e9
 MISC metadata.xml 277 RMD160 2ffb105a089a3b759ddef20bf72b06362a1d1c63 SHA1 82aa8cfe90fb0c9f7c02f295d2802d41ad2af380 SHA256 3d52f90556a9db4ad09f2fbe34e2d25b21f345e474e829ac84669d49cb64c8bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iF4EAREIAAYFAk8fwGkACgkQdjK8w9WeBnBotwD/aOsuYK1kqFTUTUtzH845t7kG
-1e/FN9e7xFx4oiUAFJwBAJ5EjeAGHnys0bb2zNK9yRc2AIWeC2SSqsbgqIBqGlal
-=tEoQ
+iF4EAREIAAYFAk9C8OQACgkQdjK8w9WeBnDaUQEAnkDMX+oW/s3H5OGZQbLiLG8S
+GOqdUFN5b0Iq6+9/ZKIA/1CD8d9siAv1UelogH1rN/IFfHT9ungbXc1gtNiC57co
+=2aIr
 -----END PGP SIGNATURE-----
