@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/muffin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/muffin/ChangeLog,v 1.1 2012/01/25 08:42:11 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/muffin/ChangeLog,v 1.2 2012/02/21 01:18:10 tetromino Exp $
+
+*muffin-1.0.1 (21 Feb 2012)
+
+  21 Feb 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +muffin-1.0.1.ebuild:
+  Version bump.
 
 *muffin-1.0.0 (25 Jan 2012)
 
